Create and apply @QueryStringArgResolver